--- a/application.html
+++ b/application.html
@@ -72,7 +72,7 @@
 
         <div class="box items-box">
           <div class="wrapper-flex-col items-wrapper">
-            <!-- FoORM HEARDER -->
+            <!-- FORM HEARDER -->
             <div class="form-nav">
               <div class="header-divider form-nav-item">
                 CLASS CANCELLATION
